<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Alcatel WiFi Link</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="deleting">Deleting</string>
    <string name="yes">Yes</string>
    <string name="sending">Sending</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">FINISH</string>
    <string name="continue_anyway">Continue</string>
    <string name="networktype">Unknown</string>
    <string name="qs_title">Quick Setup</string>
    <string name="qs_exit_query">Exit Quick Setup</string>
    <string name="qs_item_pin_code">PIN Code</string>
    <string name="qs_pin_code_prompt">Please input the PIN code\nRemain: %1$d</string>
    <string name="qs_pin_code_prompt_num">
        <xliff:g id="INPUTTIMES">%1$d</xliff:g>
        time(s)
    </string>
    <string name="qs_item_wifi_ssid">Wi-Fi Network Name (SSID)</string>
    <string name="qs_wifi_ssid_prompt">The SSID should be 1&#8211;32 characters.</string>
    <string name="qs_item_wifi_passwd">Wi-Fi Password</string>
    <string name="qs_wifi_passwd_prompt">The password should be 8&#8211;63 characters.</string>
    <string name="qs_wifi_wep_passwd_prompt">The password should be 5 or 13 ASCII characters, or 10 or 26 hexadecimal
        digits
    </string>
    <string name="qs_completed">Setup Completed</string>
    <string name="qs_summary">Your device is ready to use.</string>
    <string name="qs_wifi_ssid">Wi-Fi Network Name (SSID):
        <xliff:g id="SSID">%1$s</xliff:g>
    </string>
    <string name="qs_wifi_passwd">Wi-Fi Password:
        <xliff:g id="PASSWD">%1$s</xliff:g>
    </string>
    <string name="qs_puk_code_title">PUK Code</string>
    <string name="qs_puk_code_prompt">Please input the PUK code\nRemain:
        <xliff:g id="INPUTTIMES">%1$d</xliff:g>
        time(s)
    </string>
    <string name="qs_puk_code">PUK Code:</string>
    <string name="qs_pin_code_new">New PIN:</string>
    <string name="qs_pin_code_confirm">Confirm new PIN:</string>
    <string name="qs_hint_sim_pin">SIM PIN</string>
    <string name="qs_pin_times_des">attempts remaining</string>
    <string name="qs_pin_remember_pin_des">Remember SIM PIN</string>
    <string name="qs_pin_connect">Connect</string>
    <string name="qs_pin_unlock_congratulations">Congratulations!</string>
    <string name="qs_pin_unlock_congratulations_des">You\'re successfully connected to the Internet</string>
    <string name="qs_pin_unlock_can_not_connect">Network disconnected</string>
    <string name="qs_pin_unlock_can_not_connect_des">Check your WAN cabling or SIM card.</string>
    <string name="qs_pin_unlock_try_again">Try again</string>
    <string name="qs_pin_unlock_to_home">Home ></string>
    <string name="qs_wifi_setting_2G_wifi">2.4GHz Wi-Fi</string>
    <string name="qs_wifi_setting_5G_wifi">5GHz Wi-Fi</string>
    <string name="qs_wifi_setting_account">Account</string>
    <string name="qs_wifi_setting_password">Password</string>
    <string name="connect_internet">Connect Internet</string>
    <string name="ppp_over_ethernet" translatable="false">PPPoE</string>
    <string name="mtu">MTU</string>
    <string name="statics_ip">Statics IP</string>
    <string name="main_home">Home</string>
    <string name="main_sdsharing">SD Sharing</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="main_setting">Settings</string>
    <string name="main_sms">SMS</string>
    <string name="main_usage">Usage</string>
    <string name="home_GB">GB</string>
    <string name="home_KB">KB</string>
    <string name="home_MB">MB</string>
    <string name="home_B">B</string>
    <string name="Home_unlock_pin">Unlock</string>
    <string name="Home_no_sim">No SIM card inserted</string>
    <string name="Home_sim_invalid">Invalid SIM</string>
    <string name="Home_pin_locked">PIN Locked</string>
    <string name="Home_puk_locked">locked</string>
    <string name="Home_SimCard_IsIniting">Initializing</string>
    <string name="Home_PukTimes_UsedOut">Puk Times Used Out</string>
    <string name="Home_PinTimes_UsedOut">Pin Times Used Out</string>
    <string name="Home_SimLock_Required">SIM Lock required</string>
    <string name="Home_SimCard_Detected">SIM Card detected</string>
    <string name="Home_zero_time">0Hrs 0Mins</string>
    <string name="Home_zero_data">0</string>
    <string name="home_no_service">No Service</string>
    <string name="signal">SIGNAL</string>
    <string name="home_initializing">Initializing</string>
    <string name="home_disconnected_to">Disconnected</string>
    <string name="home_connected_to">Connected</string>
    <string name="home_connecting_to">Connecting</string>
    <string name="home_disconnecting_to">Disconnecting</string>
    <string name="home_network_type_2g">2G</string>
    <string name="home_network_type_3g">3G</string>
    <string name="home_network_type_3g_plus">3G+</string>
    <string name="home_network_type_4g">4G</string>
    <string name="home_battery_ischarging">Charging</string>
    <string name="home_battery_completed">Charge completed</string>
    <string name="home_connected_duration">%1$sHrs %2$sMins</string>
    <string name="access_lable">CONNECTED</string>
    <string name="home_sim_loched">Sim Card Locked</string>
    <string name="home_pin_locked_notice">Please verify your PIN code at the home menu first.</string>
    <string name="home_no_sim">no sim card</string>
    <string name="home_sim_not_accessible">Sim card is not accessible</string>
    <string name="home_battery_unit">%</string>
    <string name="home_usage_over_redial_message">Monthly data plan has been used up. If you want to re-dial, please
        change the monthly values or reset consumption.
    </string>
    <string name="home_exit_app">Touch again to exit app</string>
    <string name="pop_dialog_usagesetting">Usage Setting</string>
    <string name="pop_dialog_clearhistory">Clear History</string>
    <string name="usage_view_home">Home</string>
    <string name="usage_view_duration">Duration</string>
    <string name="bt_set_monthlydata">Set Monthly Data Plan</string>
    <string name="usage_status_des">No data plan set yet</string>
    <string name="usage_duration">%1$dh %2$dm</string>
    <string name="disconnected_descrition">When data usage reaches Monthly Data Plan.</string>
    <string name="usage_clear_history_success">Clear usage history successfully!</string>
    <string name="usage_clear_history_fail">Clear usage history failed!</string>
    <string name="usage_comsumptionexplain_label">If enable clear function, please disconnect first.</string>
    <string name="usage_setting_mobile_data">Mobile data</string>
    <string name="usage_setting_title">Usage Settings</string>
    <string name="usage_setting_timelimit">limit</string>
    <string name="usage_setting_settimelimit">Set Time Limit:</string>
    <string name="usage_setting_timeunit">min(s)</string>
    <string name="usage_setting_usage">Usage</string>
    <string name="usage_setting_billingday">Billing cycle:</string>
    <string name="usage_setting_usagealert">Usage alert</string>
    <string name="usage_setting_dayunit">day</string>
    <string name="usage_setting_usagealertunit">%</string>
    <string name="usage_setting_monthlysataplan">Monthly data limit:</string>
    <string name="usage_setting_monthlyunit">MB</string>
    <string name="usage_setting_monthlyunitgb">GB</string>
    <string name="usage_setting_dataconsunption">Data Consumption:</string>
    <string name="usage_setting_roaming">Data roaming</string>
    <string name="roaming_descrition">Automatically connect even when in roaming.</string>
    <string name="usage_setting_autodisconnected">Disconnect automatically</string>
    <string name="auto_disconnect">Auto disconnect</string>
    <string name="wifi_key_edit">Edit</string>
    <string name="wifi_key_Done">Done</string>
    <string name="wifi_network">Wi-Fi NETWORK</string>
    <string name="first_wifi">2.4G WiFi</string>
    <string name="second_wifi">5G WiFi</string>
    <string name="unEdit_wifi_name">Name(SSID)</string>
    <string name="password">Password</string>
    <string name="wifi_name">Wi-Fi Network Name(SSID)</string>
    <string name="wifi_password">Wi-Fi bassword</string>
    <string name="ssid_broadcast">SSID broadcast</string>
    <string name="security_type">Security_Type</string>
    <string name="encryption_type">Encryption Type</string>
    <string name="channel">Channel</string>
    <string name="country">Country</string>
    <string name="sms_title">Message</string>
    <string name="sms_empty">No SMS</string>
    <string name="sms_init">SMS Unavailable</string>
    <string name="sms_list_view_draft">%1$d,draft</string>
    <string name="sms_send_fail">Fail</string>
    <string name="sms_report_message">delivered!</string>
    <string name="sms_to">To:</string>
    <string name="sms_new_title">message</string>
    <string name="sms_error_send_error">Send SMS error!</string>
    <string name="sms_send_success">Send SMS success.</string>
    <string name="sms_error_message_full_storage">SMS box is full, please delete some SMS to be able to send/save new
        SMS.
    </string>
    <string name="sms_delete_multi_success">Delete conversation success!</string>
    <string name="sms_delete_multi_error">Delete conversation failed!</string>
    <string name="sms_delete_error">Delete SMS error!</string>
    <string name="sms_delete_success">Delete SMS success!</string>
    <string name="sms_number_invalid">Error! Only 3 phone numbers are allowed.</string>
    <string name="sms_save_success">SMS is saved as a draft.</string>
    <string name="sms_save_error">Save SMS failed.</string>
    <string name="sms_unread_num">(%1$d)</string>
    <string name="setting_imsi">IMSI</string>
    <string name="setting_sim_number">SIM number</string>
    <string name="setting_change_pin">Change SIM PIN</string>
    <string name="usage_setting_sim_pin">SIM PIN</string>
    <string name="setting_set_data_plan">Set data plan</string>
    <string name="setting_network_connect_mode">Connection mode</string>
    <string name="device_manage_title">Devices</string>
    <string name="device_manage_connected">Connected Devices (%1$d)</string>
    <string name="setting_wifi">WiFi</string>
    <string name="setting_titlebar_text_edit">Edit</string>
    <string name="setting_wifi_share">Share</string>
    <string name="login_login_btn">LOG IN</string>
    <string name="login_enter_password">Enter admin password</string>
    <string name="login_enter_password_tip">5-16 characters</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="operation_download">Download</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_move_to">Move to</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_cancel_edit">Cancel edit</string>
    <string name="details_text_size">Size:</string>
    <string name="details_text_create_date">Create Date:</string>
    <string name="details_text_modified_date">Modified Date:</string>
    <string name="NETMODE_STATUS_SUCCESS_DES2">You\'re successfully to connect the Internet</string>
    <string name="NETMODE_STATUS_FAILED_DES1">Couldn\'t connect</string>
    <string name="NETMODE_STATUS_FAILED_DES2">Check your WAN cabling or SIM card</string>
    <string name="NETMODE_STATUS_FAILED_TRYAGAIN">Try again</string>
    <string name="NETMODE_STATUS_FAILED_HOME">Home ></string>
    <string name="login_remenber_psd">Remenber password</string>
</resources>