<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/operation_button_delete"
        android:showAsAction="never"
        android:title="@string/delete" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/operation_button_move"
        android:showAsAction="never"
        android:title="@string/operation_move" />

    <item
        android:id="@+id/action_move_to"
        android:icon="@drawable/operation_button_move"
        android:showAsAction="never"
        android:title="@string/operation_move_to" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/operation_button_download"
        android:showAsAction="never"
        android:title="@string/operation_download" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/operation_button_send"
        android:showAsAction="never"
        android:title="@string/setting_wifi_share" />

    <item
        android:id="@+id/action_rename"
        android:showAsAction="never"
        android:title="@string/operation_rename" />

    <item
        android:id="@+id/action_details"
        android:showAsAction="never"
        android:title="@string/operation_info" />

    <item
        android:id="@+id/action_cancel_edit"
        android:showAsAction="never"
        android:title="@string/operation_cancel_edit" />
</menu>
