<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/ib_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:background="@color/color_transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/tv_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/ib_title_back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/color_white"
        android:textSize="16sp" />
    <FrameLayout
        android:id="@+id/fl_edit_or_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_titlebar_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_titlebar_text_edit"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/tv_titlebar_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>    

    <TextView
        android:id="@+id/tv_title_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="50dp"
        android:gravity="center"
        android:text="@string/setting_wifi"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:textStyle="bold" />
    

</RelativeLayout>
